--- a/src/app/empresa/departamento-form/departamento-form.component.html
+++ b/src/app/empresa/departamento-form/departamento-form.component.html
@@ -5,37 +5,21 @@
 
 <div class="container">
 
-  <form #departamentoForm="ngForm" (ngSubmit)="onSubmit()">
+  <form #form="ngForm" (ngSubmit)="onSubmit(form)" novalidate>
 
     <div class="row">
       <div class="col-md-12">
-        <div *ngIf="success == true" class="alert alert-success" role="alert">
+        <div *ngIf="success == true"
+             class="alert alert-success"
+             role="alert">
           Departamento salvo com sucesso!
         </div>
-
         <div class="alert alert-danger" role="alert" *ngFor="let erro of errors">
           {{ erro }}
         </div>
       </div>
     </div>
-    <div class="row" *ngIf="departamento.id">
-      <div class="col-md-6">
-        <div class="form-group">
-          <label>ID:</label>
-          <input type="text" class="form-control"
-                 name="id" [ngModel]="departamento.id" disabled="true"/>
-        </div>
-      </div>
 
-      <div class="col-md-6">
-        <div class="form-group">
-          <label>Data Cadastro:</label>
-          <input type="text" class="form-control"
-                 name="dataCadastro" [ngModel]="departamento.dataCadastro" disabled="true"/>
-        </div>
-      </div>
-
-    </div>
 
     <div class="row">
 
@@ -61,10 +45,11 @@
     <div class="row">
       <div class="col-md-3">
         <button type="submit" class="btn btn-success" *ngIf="!departamento.id">
-          <i class="fa fa-save"></i> Salvar
+          <i class="fa fa-save" *ngIf="success"></i> Salvar
 
-        </button>  <button type="submit" class="btn btn-primary ml-1" *ngIf="departamento.id">
-        <i class="fa-solid fa-arrows-rotate"></i> Atualizar
+        </button>
+        <button type="submit" class="btn btn-primary ml-1" *ngIf="departamento.id">
+          <i class="fa-solid fa-arrows-rotate"></i> Atualizar
         </button>
 
         <button type="button" class="btn btn-danger ml-1" (click)="voltaParaPaginaDeListagem()">
@@ -72,6 +57,5 @@
         </button>
       </div>
     </div>
-
   </form>
 </div>
