--- a/src/app/empresa/endereco-form/endereco-form.component.html
+++ b/src/app/empresa/endereco-form/endereco-form.component.html
@@ -7,17 +7,20 @@
   <form #form="ngForm" (ngSubmit)="onSubmit(form)" novalidate>
 
     <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <label for="id">ID:</label>
-          <input type="text" class="form-control"
-                 name="id" disabled="true"
-                 id="id"
-                 [(ngModel)]="endereco.id"/>
+      <div class="col-md-12">
+        <div *ngIf="success == true"
+             class="alert alert-success"
+             role="alert">
+          Endereco salvo com sucesso!
+        </div>
 
+        <div class="alert alert-danger" role="alert" *ngFor="let erro of errors">
+          {{ erro }}
         </div>
       </div>
+    </div>
 
+    <div class="row">
       <div class="col-md-6">
         <div class="form-group">
           <label for="cep">CEP:</label>
@@ -120,11 +123,11 @@
 
       <div class="row">
         <div class="col-md-6">
-          <button type="submit" class="btn btn-success">
-            <i class="fa fa-save"></i> Salvar
+          <button type="submit" *ngIf="!endereco.id" class="btn btn-success" >
+            <i class="fa fa-save"  *ngIf="success"></i> Salvar
           </button>
 
-          <button type="submit" class="btn btn-primary ml-1">
+          <button type="submit" class="btn btn-primary ml-1" *ngIf="endereco.id">
             <i class="fa-solid fa-arrows-rotate"></i> Atualizar
           </button>
 
