--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -29,14 +29,16 @@
             Endereço
           </a>
 
-          <!-- Cadastro de Funcionário -->
-          <!--          <a class="nav-link collapsed" routerLink="/funcionario-form" data-toggle="collapse"-->
-          <!--             data-target="#collapseLayouts"-->
-          <!--             aria-expanded="false" aria-controls="collapseLayouts"-->
-          <!--          >-->
-          <!--            <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>-->
-          <!--            Funcionário-->
-          <!--          </a>-->
+<!--          Cadastro de Funcionário-->
+          <a class="nav-link collapsed" routerLink="/funcionario-lista" data-toggle="collapse"
+             data-target="#collapseLayouts"
+             aria-expanded="false" aria-controls="collapseLayouts"
+          >
+            <div class="sb-nav-link-icon">
+              <i class="fas fa-columns"></i>
+            </div>
+            Funcionário
+          </a>
 
         </div>
       </div>
