--- a/src/app/empresa/funcionario-lista/funcionario-lista.component.html
+++ b/src/app/empresa/funcionario-lista/funcionario-lista.component.html
@@ -1,10 +1,9 @@
-<h1 class="mt-4">Listas de departamentos</h1>
+<h1 class="mt-4">Listas de funcionários</h1>
 <ol class="breadcrumb mb-4">
-  <li class="breadcrumb-item active">departamentos</li>
+  <li class="breadcrumb-item active">Funcionários</li>
 </ol>
 
 <div class="container">
-
   <div class="row">
     <div class="col-md-12">
       <div *ngIf="mensagemSucesso" class="alert alert-success" role="alert">
@@ -17,8 +16,8 @@
     </div>
   </div>
 
-  <div class="row">
 
+  <div class="row">
     <div class="col-md-2">
       <button class="btn btn-success" (click)="novoCadastro()">
         <i class="fa-solid fa-square-plus"></i> Novo
@@ -27,45 +26,41 @@
   </div>
   <br/>
 
-
-
   <div class="row">
     <div class="col-md-12">
       <table class="table table-hover">
         <thead>
         <tr>
-          <th>ID</th>
-          <th>Data Cadastro</th>
           <th>Nome</th>
-          <th>Numero</th>
+          <th>Data de Nascimento</th>
+          <th>Cargo</th>
+          <th>CPF</th>
+          <th>Endereço</th>
+          <th>Supervisor</th>
         </tr>
         </thead>
 
         <tbody class="">
-        <tr *ngFor="let departamento of departamentos">
-          <td>{{ departamento.id }}</td>
-          <td>{{ departamento.dataCadastro }}</td>
-          <td>{{ departamento.nome }}</td>
-          <td>{{ departamento.numero }}</td>
+        <tr *ngFor="let funcionario of funcionarios">
+          <td>{{ funcionario.nome }}</td>
+          <td>{{ funcionario.dataNascimento }}</td>
+          <td>{{ funcionario.cargo }}</td>
+          <td>{{ funcionario.cpf }}</td>
+          <td>{{ funcionario.idEndereco }}</td>
+          <td>{{ funcionario.idSupervisor }}</td>
           <td>
 
-            <button class="btn btn-warning" routerLink="/departamento-form/{{ departamento.id }}">
+            <button class="btn btn-warning" routerLink="/funcionario-form/{{ funcionario.id }}">
               <i class="fa-solid fa-square-pen"></i>
             </button>
 
-            <button class="btn btn-danger ml-1" (click)="preparaDelecao(departamento)"
+            <button class="btn btn-danger ml-1" (click)="preparaDelecao(funcionario)"
                     data-bs-toggle="modal"
                     data-bs-target="#modalDelecao">
               <i class="fa-solid fa-trash-can"></i>
             </button>
-          </td>
-
-
-        </tr>
-        </tbody>
       </table>
     </div>
-
   </div>
 
   <!-- Modal de exclusão -->
@@ -77,18 +72,18 @@
           <h4>Confirmação</h4>
         </div>
 
-        <div class="modal-body" *ngIf="departamentoSelecionado">
-          Deseja realmente apagar o departamento {{ departamentoSelecionado.nome }} ?
+        <div class="modal-body" *ngIf="funcionarioSelecionado">
+          Deseja realmente apagar o departamento {{ funcionarioSelecionado.nome }} ?
         </div>
 
         <div class="modal-footer">
-          <button type="button" class="btn btn-success" data-bs-dismiss="modal" (click)="deletarDepartamento()">Confirmar</button>
+          <button type="button" class="btn btn-success" data-bs-dismiss="modal" (click)="deletarFuncionario()">
+            Confirmar
+          </button>
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
         </div>
 
       </div>
     </div>
-
-
   </div>
 </div>
