--- a/src/app/empresa/funcionario-lista/funcionario-lista.component.html
+++ b/src/app/empresa/funcionario-lista/funcionario-lista.component.html
@@ -73,7 +73,7 @@
         </div>
 
         <div class="modal-body" *ngIf="funcionarioSelecionado">
-          Deseja realmente apagar o departamento {{ funcionarioSelecionado.nome }} ?
+          Deseja realmente apagar o funcionário com o nome  {{ funcionarioSelecionado.nome }} ?
         </div>
 
         <div class="modal-footer">
