--- a/src/app/template/footer/footer.component.html
+++ b/src/app/template/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="py-4 bg-light mt-1">
-  <div class="container-fluid">
+  <div class="container">
     <div class="d-flex align-items-center justify-content-between small">
       <div class="text-muted">Copyright &copy; Jean Heberth 2024</div>
       <div>
