--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -9,43 +9,32 @@
             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
             Home</a>
 
-          <div class="sb-sidenav-menu-heading">Listagem</div>
 
-          <!-- Cadastro de Departamento-->
-          <a class="nav-link collapsed" routerLink="/departamento-lista" data-toggle="collapse"
-             data-target="#collapseLayouts"
-             aria-expanded="false" aria-controls="collapseLayouts"
-          >
-            <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-            Departamento
-          </a>
+          <a class="nav-link collapsed" href="#" data-toggle="collapse"
+             data-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
 
-          <!-- Cadastro de Endereço -->
-          <a class="nav-link collapsed" routerLink="/endereco-lista" data-toggle="collapse"
-             data-target="#collapseLayouts"
-             aria-expanded="false" aria-controls="collapseLayouts">
-            <div class="sb-nav-link-icon"><i class="fas fa-columns"></i>
+            <div class=""><i class="fas fa-columns"></i> Listagem</div>
+
+            <div class="sb-sidenav-collapse-arrow">
+              <i class="fas fa-angle-down">
+              </i>
             </div>
-            Endereço
           </a>
 
-<!--          Cadastro de Funcionário-->
-          <a class="nav-link collapsed" routerLink="/funcionario-lista" data-toggle="collapse"
-             data-target="#collapseLayouts"
-             aria-expanded="false" aria-controls="collapseLayouts"
-          >
-            <div class="sb-nav-link-icon">
-              <i class="fas fa-columns"></i>
-            </div>
-            Funcionário
-          </a>
 
+          <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
+            <nav class="sb-sidenav-menu-nested nav">
+              <a class="nav-link" routerLink="/departamento-lista">Departamento</a>
+              <a class="nav-link" routerLink="/endereco-lista">Endereço</a>
+              <a class="nav-link" routerLink="/funcionario-lista">Funcionário</a>
+            </nav>
+          </div>
         </div>
-      </div>
-      <div class="sb-sidenav-footer">
-        <div class="small">Logged in as:</div>
-        Starting bootstrap
 
+        <div class="sb-sidenav-footer">
+          <div class="small">Logged in as:</div>
+          Starting bootstrap
+        </div>
       </div>
     </nav>
   </div>
