--- a/src/app/empresa/funcionario-lista/funcionario-lista.component.html
+++ b/src/app/empresa/funcionario-lista/funcionario-lista.component.html
@@ -31,6 +31,7 @@
       <table class="table table-hover">
         <thead>
         <tr>
+          <th>ID</th>
           <th>Nome</th>
           <th>Data de Nascimento</th>
           <th>Cargo</th>
@@ -42,6 +43,7 @@
 
         <tbody class="">
         <tr *ngFor="let funcionario of funcionarios">
+          <td>{{ funcionario.id }}</td>
           <td>{{ funcionario.nome }}</td>
           <td>{{ funcionario.dataNascimento }}</td>
           <td>{{ funcionario.cargo }}</td>
