--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -27,6 +27,7 @@
               <a class="nav-link" routerLink="/departamento-lista">Departamento</a>
               <a class="nav-link" routerLink="/endereco-lista">Endereço</a>
               <a class="nav-link" routerLink="/funcionario-lista">Funcionário</a>
+              <a class="nav-link" routerLink="/projeto-lista">Projeto</a>
             </nav>
           </div>
         </div>
