--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -28,6 +28,7 @@
               <a class="nav-link" routerLink="/endereco-lista">Endereço</a>
               <a class="nav-link" routerLink="/funcionario-lista">Funcionário</a>
               <a class="nav-link" routerLink="/projeto-lista">Projeto</a>
+              <a class="nav-link" routerLink="/orcamento-lista">Orçamento</a>
             </nav>
           </div>
         </div>
