Testando se a notificação chegará por email

--- a/src/app/empresa/projeto-lista/projeto-lista.component.html
+++ b/src/app/empresa/projeto-lista/projeto-lista.component.html
@@ -36,7 +36,7 @@
           <th>Valor do projeto</th>
           <th>Inicio do projeto</th>
           <th>Final do projeto</th>
-          <th>Departamentoagadsa</th>
+          <th>Departamentoagadsafdsa</th>
         </tr>
         </thead>
 
