--- a/src/app/empresa/projeto-lista/projeto-lista.component.html
+++ b/src/app/empresa/projeto-lista/projeto-lista.component.html
@@ -42,7 +42,7 @@
 
         <tbody class="">
         <tr *ngFor="let projeto of projetos">
-          <td>{{ projeto.id }}</td>
+          <td>{{ projeto.id }}</td>ß
           <td>{{ projeto.nome }}</td>
           <td>{{ projeto.valorProjeto }}</td>
           <td>{{ projeto.dataInicio }}</td>
