--- a/src/app/empresa/projeto-lista/projeto-lista.component.html
+++ b/src/app/empresa/projeto-lista/projeto-lista.component.html
@@ -36,13 +36,13 @@
           <th>Valor do projeto</th>
           <th>Inicio do projeto</th>
           <th>Final do projeto</th>
-          <th>Departamentoagadsafdsa</th>
+          <th>Departamento</th>
         </tr>
         </thead>
 
         <tbody class="">
         <tr *ngFor="let projeto of projetos">
-          <td>{{ projeto.id }}</td>ß
+          <td>{{ projeto.id }}</td>
           <td>{{ projeto.nome }}</td>
           <td>{{ projeto.valorProjeto }}</td>
           <td>{{ projeto.dataInicio }}</td>
