--- a/src/app/empresa/endereco-lista/endereco-lista.component.html
+++ b/src/app/empresa/endereco-lista/endereco-lista.component.html
@@ -35,12 +35,12 @@
         <tr>
           <th>ID</th>
           <th>Cep</th>
-          <th>Logradouro</th>
           <th>Bairro</th>
           <th>Estado</th>
           <th>Cidade</th>
           <th>Complemento</th>
-          <th required>Casa</th>
+          <th>Casa</th>
+          <th>Opções</th>
         </tr>
         </thead>
 
@@ -48,7 +48,6 @@
         <tr *ngFor="let endereco of enderecos">
           <td>{{ endereco.id }}</td>
           <td>{{ endereco.cep }}</td>
-          <td>{{ endereco.logradouro }}</td>
           <td>{{ endereco.bairro }}</td>
           <td>{{ endereco.estado }}</td>
           <td>{{ endereco.cidade }}</td>
@@ -61,7 +60,7 @@
               <i class="fa-solid fa-square-pen"></i>
             </button>
 
-            <button class="btn btn-danger ml-1 col-md-6"
+            <button class="btn btn-danger ml-1"
 
                     (click)="preparaDelecao(endereco)"
                     data-bs-toggle="modal"
