--- a/src/app/empresa/funcionario-form/funcionario-form.component.html
+++ b/src/app/empresa/funcionario-form/funcionario-form.component.html
@@ -39,7 +39,7 @@
                  class="form-control"
                  id="email"
                  name="email"
-                 placeholder="Email"
+                 placeholder="email"
                  [(ngModel)]="funcionario.email" required>
         </div>
       </div>
@@ -53,6 +53,7 @@
           <input type="text"
                  class="form-control"
                  id="cpf" name="cpf"
+                 mask="000.000.000-00"
                  placeholder="CPF"
                  [(ngModel)]="funcionario.cpf" required>
         </div>
@@ -78,6 +79,8 @@
           <input type="text"
                  class="form-control"
                  id="salario"
+                 currencyMask
+                 [options]="{prefix: 'R$ '}"
                  name="salario"
                  placeholder="Salario"
                  [(ngModel)]="funcionario.salario"
@@ -88,9 +91,13 @@
       <div class="col-md-6">
         <div class="form-group">
           <label for="telefone">Telefone</label>
-          <input type="text" class="form-control" id="telefone" name="telefone"
+          <input type="text" class="form-control"
+                 id="telefone"
+                 prefix="+55 "
+                 mask="00 00000-0000"
+                 name="telefone"
                  [(ngModel)]="funcionario.telefone"
-                 placeholder="Telefone"
+                 placeholder="(99) 99999-9999"
                  required>
         </div>
       </div>
@@ -100,7 +107,7 @@
       <div class="col-md-6">
         <div class="form-group">
           <label for="dataNascimento">Data de Nascimento</label>
-          <input type="text"
+          <input type="date"
                  class="form-control"
                  id="dataNascimento"
                  name="dataNascimento"
