--- a/src/app/empresa/projeto-lista/projeto-lista.component.html
+++ b/src/app/empresa/projeto-lista/projeto-lista.component.html
@@ -37,6 +37,7 @@
           <th>Inicio do projeto</th>
           <th>Final do projeto</th>
           <th>Departamento</th>
+          <th>Opções</th>
         </tr>
         </thead>
 
