--- a/src/app/empresa/orcamento-lista/orcamento-lista.component.html
+++ b/src/app/empresa/orcamento-lista/orcamento-lista.component.html
@@ -49,7 +49,7 @@
           <td>{{ orcamento.valor }}</td>
           <td>{{ orcamento.dataInicio }}</td>
           <td>{{ orcamento.dataFinal }}</td>
-          <td>{{ orcamento.idDepartamento }}</td>
+          <td>{{ orcamento.nomeDepartamento }}</td>
 
           <td>
 
