--- a/src/app/empresa/projeto-lista/projeto-lista.component.html
+++ b/src/app/empresa/projeto-lista/projeto-lista.component.html
@@ -48,7 +48,7 @@
           <td>{{ projeto.valorProjeto }}</td>
           <td>{{ projeto.dataInicio }}</td>
           <td>{{ projeto.dataFinal }}</td>
-          <td>{{ projeto.idDepartamento }}</td>
+          <td>{{ projeto.nomeDepartamento }}</td>
           <td>
 
             <button class="btn btn-warning" routerLink="/projeto-form/{{ projeto.id }}">
