--- a/src/app/empresa/funcionario-lista/funcionario-lista.component.html
+++ b/src/app/empresa/funcionario-lista/funcionario-lista.component.html
@@ -33,10 +33,10 @@
         <tr>
           <th>ID</th>
           <th>Nome</th>
-          <th>Data de Nascimento</th>
+          <th>Matricula</th>
+          <th>Data de Admissão</th>
           <th>Cargo</th>
-          <th>CPF</th>
-          <th>Endereço</th>
+          <th>Salário</th>
           <th>Supervisor</th>
         </tr>
         </thead>
@@ -44,12 +44,12 @@
         <tbody class="">
         <tr *ngFor="let funcionario of funcionarios">
           <td>{{ funcionario.id }}</td>
-          <td>{{ funcionario.nome }}</td>
-          <td>{{ funcionario.dataNascimento }}</td>
+          <td>{{ funcionario.pessoaNome }}</td>
+          <td>{{ funcionario.matricula }}</td>
+          <td>{{ funcionario.dataAdmissao }}</td>
           <td>{{ funcionario.cargo }}</td>
-          <td>{{ funcionario.cpf }}</td>
-          <td>{{ funcionario.idEndereco }}</td>
-          <td>{{ funcionario.idSupervisor }}</td>
+          <td>{{ funcionario.salario }}</td>
+          <td>{{ funcionario.nomeSupervisor }}</td>
           <td>
 
             <button class="btn btn-warning" routerLink="/funcionario-form/{{ funcionario.id }}">
