--- a/src/app/empresa/orcamento-form/orcamento-form.component.html
+++ b/src/app/empresa/orcamento-form/orcamento-form.component.html
@@ -40,6 +40,7 @@
                  type="text"
                  class="form-control"
                  placeholder="valor do Orcamento"
+                 [options]="{prefix: 'R$ '}"
                  currencyMask
                  [(ngModel)]="orcamento.valor"
                  name="logradouro"/>
@@ -53,8 +54,7 @@
           <label for="dataInicio">Data Início:</label>
           <input id="dataInicio" type="date"
                  class="form-control"
-                 placeholder="Data do orçamento"
-                 [(ngModel)]="model.dataConverter"
+                 placeholder="Data do orçamento" [(ngModel)]="model.dataConverter"
                  [(ngModel)]="orcamento.dataInicio"
                  name="datainicio" required/>
         </div>
@@ -65,7 +65,6 @@
           <label for="dataFinal">Data Final:</label>
           <input id="dataFinal" type="date" class="form-control"
                  placeholder="Validade do Orcamento"
-                 [(ngModel)]="model.dataConverter"
                  [(ngModel)]="orcamento.dataFinal"
                  name="dataFinal"/>
         </div>
