--- a/src/app/empresa/projeto-form/projeto-form.component.html
+++ b/src/app/empresa/projeto-form/projeto-form.component.html
@@ -57,7 +57,10 @@
           <input id="dataInicio" type="date"
                  class="form-control"
                  [(ngModel)]="projeto.dataInicio"
-                 name="datainicio" required/>
+                 name="datainicio" required
+
+
+          />
         </div>
       </div>
 
@@ -85,8 +88,12 @@
 
     <div class="row">
       <div class="col-md-3">
-        <button type="submit" class="btn btn-success" *ngIf="!projeto.id">
-          <i class="fa fa-save" *ngIf="success"></i> Salvar
+        <button type="submit" class="btn btn-success"
+                [disabled]="!projetoForm.valid"
+                *ngIf="!projeto.id">
+          <i class="fa fa-save"
+
+             *ngIf="success"></i> Salvar
 
         </button>
         <button type="submit" class="btn btn-primary ml-1" *ngIf="projeto.id">
